Insert ToC for FAQ

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -5,6 +5,21 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
+- [What are you doing at OpenSats?](#what-are-you-doing-at-opensats)
+- [How are funds distributed?](#how-are-funds-distributed)
+- [How much of my donation goes towards open-source contributors supported by OpenSats?](#how-much-of-my-donation-goes-towards-open-source-contributors-supported-by-opensats)
+- [Do you distribute grants in bitcoin or fiat?](#do-you-distribute-grants-in-bitcoin-or-fiat)
+- [How do you collect bitcoin donations?](#how-do-you-collect-bitcoin-donations)
+- [How can I communicate with you?](#how-can-i-communicate-with-you)
+- [How often are funding opportunities announced?](#how-often-are-funding-opportunities-announced)
+- [How do I apply for funding?](#how-do-i-apply-for-funding)
+- [How did you choose the board?](#how-did-you-choose-the-board)
+- [Do board members benefit financially from donations?](#do-board-members-benefit-financially-from-donations)
+- [Tell me more about your board. How does it work?](#tell-me-more-about-your-board-how-does-it-work)
+- [Are you really 100% passthrough?](#are-you-really-100-passthrough)
+- [Are my donations tax deductible?](#are-my-donations-tax-deductible)
+
+
 ## What are you doing at OpenSats?
 
 **Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which
