Add FAQ entry: When is the best time to apply?

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -13,6 +13,7 @@ layout: PageLayout
 - [How can I communicate with you?](#how-can-i-communicate-with-you)
 - [How often are funding opportunities announced?](#how-often-are-funding-opportunities-announced)
 - [How do I apply for funding?](#how-do-i-apply-for-funding)
+- [When is the best time to apply?](#when-is-the-best-time-to-apply)
 - [How did you choose the board?](#how-did-you-choose-the-board)
 - [Do board members benefit financially from donations?](#do-board-members-benefit-financially-from-donations)
 - [Tell me more about your board. How does it work?](#tell-me-more-about-your-board-how-does-it-work)
@@ -108,6 +109,15 @@ pre-approved, mission-aligned projects.
 
 If you are helping Bitcoin and FOSS, please [submit an application](/apply) on
 our website.
+
+## When is the best time to apply?
+
+We are continually evaluating applications and are reviewing grant proposals as
+described in our [grant selection](/selection) process.
+
+You are free to apply at any time except for the months of March, June,
+September, and December, where we close applications to make internal
+improvements and do some housekeeping.
 
 ## How did you choose the board?
 
