--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -5,6 +5,8 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
+Frequently asked questions:
+
 - [What are you doing at OpenSats?](#what-are-you-doing-at-opensats)
 - [How are funds distributed?](#how-are-funds-distributed)
 - [How much of my donation goes towards open-source contributors supported by OpenSats?](#how-much-of-my-donation-goes-towards-open-source-contributors-supported-by-opensats)
@@ -46,10 +48,10 @@ impact projects in the Bitcoin space.
 You can find a list of past and active grantees, as well as links to our reports
 at our [transparency](/transparency) section.
 
-## How much of my donation goes towards open-source contributors supported by OpenSats?
+## How much of my donation goes towards open-source contributors?
 
 100%. All donations to our open-source funds go in full to OpenSats grant
-recipients.  We do not take a cut from donations and try our best to find donor
+recipients. We do not take a cut from donations and try our best to find donor
 matching partners that cover the transaction fees that incur with each donation,
 regardless of payment method.
 
@@ -80,8 +82,8 @@ The best way to [contact us](/contact) is via email:
 You can also write to us at:
 
 ```
-Open Sats Initiative, Inc.  
-42041 Cypress Parkway #4-207  
+Open Sats Initiative, Inc. 
+42041 Cypress Parkway #4-207 
 Punta Gorda, FL 33982
 ```
 
