--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -9,7 +9,7 @@ Frequently asked questions:
 
 - [What are you doing at OpenSats?](#what-are-you-doing-at-opensats)
 - [How are funds distributed?](#how-are-funds-distributed)
-- [How much of my donation goes towards open-source contributors supported by OpenSats?](#how-much-of-my-donation-goes-towards-open-source-contributors-supported-by-opensats)
+- [How much of my donation goes towards open-source contributors?](#how-much-of-my-donation-goes-towards-open-source-contributors)
 - [Do you distribute grants in bitcoin or fiat?](#do-you-distribute-grants-in-bitcoin-or-fiat)
 - [How do you collect bitcoin donations?](#how-do-you-collect-bitcoin-donations)
 - [How can I communicate with you?](#how-can-i-communicate-with-you)
