--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -19,7 +19,7 @@ foundation to do just that. Donors can come to the OpenSats website and
 either recommend gifts to specific project areas or contribute to our
 [general fund][gf].
 
-Grants are distributed periodically by our board. We evaluate and assess
+Grants are distributed periodically by our board. We [evaluate and assess](/selection)
 applications to make sure any grants are awarded to high impact projects in the
 Bitcoin space. We distribute grants to a wide variety of contributor types
 (developers, designers, researchers, educators, reviewers, and the like), but
@@ -31,7 +31,7 @@ public access to Bitcoin infrastructure.
 # Board of Directors
 
 We don't want any one person or small group to have control of the decision
-making process of OpenSats, so we created a transparent, public-facing, and
+making process of OpenSats, so we created a [transparent](/transparency), public-facing, and
 accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
